styled the basic frontend

--- a/src/server/static/404.html
+++ b/src/server/static/404.html
@@ -4,11 +4,24 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>H2.live scraper</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="styles/index.css" />
 	</head>
 	<body>
-		<h1>404</h1>
-		<p>Page not found</p>
-		<br />
+		<div
+			style="
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				gap: 15px;
+			">
+			<h1>404</h1>
+			<h2>Page not found</h2>
+		</div>
 		<p>To get back to the main page click <a href="/">here</a>.</p>
 	</body>
 </html>
