--- a/src/server/static/index.html
+++ b/src/server/static/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>H2.live scraper</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="styles/index.css" />
 	</head>
 	<body>
 		<h1>H2.live scraper</h1>
@@ -11,10 +17,13 @@
 			Scrapes data from <a href="https://h2.live/">h2.live</a> and
 			provides it as a dataset through the api of this site.
 		</p>
-		<br />
 		<p>
 			The project is open source and available on
 			<a href="https://github.com/bambusgamer/h2.live-scraper">GitHub</a>.
+		</p>
+		<p>
+			A excel file that can process the data is available on the GitHub
+			page.
 		</p>
 		<h2><u>Downloads</u></h2>
 		<h3>Combined Data</h3>
@@ -40,11 +49,11 @@
 		<br />
 		<h3>Fueling Events</h3>
 		<p>includes the fueling events as a csv file</p>
-		<a href="/api/v1/data/fueling_events.csv" download>Download</a>
+		<a href="/api/v1/data/fueling-events.csv" download>Download</a>
 		<br />
 		<p>
 			Available through the api at
-			https://hopium.funkloch.net/api/v1/data/fueling_events.csv
+			https://hopium.funkloch.net/api/v1/data/fueling-events.csv
 		</p>
 		<br />
 		<h3>Downtimes</h3>
